src/objects/AccessTokenDetails__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to store Access Token and expiry related information.</description>
    <fields>
        <fullName>AccessExpiryTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccessExpiryTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccessLastRefreshed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccessLastRefreshed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccessTokenUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccessTokenUrl</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AccessToken__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AccessToken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientId_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClientId</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ClientSecret_del__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ClientSecret</label>
        <type>TextArea</type>
    </fields>
    <label>AccessTokenDetails</label>
</CustomObject>